osm: track szigetmonostor state

--- a/osm/Makefile
+++ b/osm/Makefile
@@ -8,6 +8,7 @@ update-streets: streets.txt workdir/streets-gazdagret.txt workdir/streets-sasheg
 	./overpass-query workdir/streets-martonhegy.txt > workdir/streets-martonhegy.csv
 	./overpass-query workdir/streets-ormezo.txt > workdir/streets-ormezo.csv
 	./overpass-query workdir/streets-balatonboglar.txt > workdir/streets-balatonboglar.csv
+	./overpass-query workdir/streets-szigetmonostor.txt > workdir/streets-szigetmonostor.csv
 
 update-streets-nomaxspeed: streets-nomaxspeed.txt
 	./overpass-query streets-nomaxspeed.txt > workdir/streets-nomaxspeed.csv
@@ -21,6 +22,7 @@ update-house-numbers: street-housenumbers.txt workdir/street-housenumbers-gazdag
 	./overpass-query workdir/street-housenumbers-martonhegy.txt > workdir/street-housenumbers-martonhegy.csv
 	./overpass-query workdir/street-housenumbers-ormezo.txt > workdir/street-housenumbers-ormezo.csv
 	./overpass-query workdir/street-housenumbers-balatonboglar.txt > workdir/street-housenumbers-balatonboglar.csv
+	./overpass-query workdir/street-housenumbers-szigetmonostor.txt > workdir/street-housenumbers-szigetmonostor.csv
 
 update-addr-interpolation: addr-interpolation.txt workdir/street-housenumbers-gazdagret.txt workdir/street-housenumbers-sashegy.txt
 	@mkdir -p workdir
@@ -54,6 +56,7 @@ check: check-style download
 	qa/houseless-streets.py -martonhegy
 	qa/houseless-streets.py -ormezo
 	#qa/houseless-streets.py -balatonboglar
+	#qa/houseless-streets.py -szigetmonostor
 	qa/interpolated-addresses.py
 	qa/interpolated-addresses.py -gazdagret
 	qa/interpolated-addresses.py -sashegy
@@ -71,6 +74,10 @@ workdir/streets-balatonboglar.txt: streets.txt
 	@mkdir -p workdir
 	sed 's/3602714372/3601367832/' streets.txt > workdir/streets-balatonboglar.txt
 
+workdir/streets-szigetmonostor.txt: streets.txt
+	@mkdir -p workdir
+	sed 's/3602714372/3600216157/' streets.txt > workdir/streets-szigetmonostor.txt
+
 workdir/streets-gazdagret.txt: streets.txt
 	@mkdir -p workdir
 	sed 's/3602714372/3602713748/' streets.txt > workdir/streets-gazdagret.txt
@@ -82,6 +89,10 @@ workdir/street-housenumbers-gazdagret.txt: street-housenumbers.txt
 workdir/street-housenumbers-balatonboglar.txt: street-housenumbers.txt
 	@mkdir -p workdir
 	sed 's/3602714372/3601367832/' street-housenumbers.txt > workdir/street-housenumbers-balatonboglar.txt
+
+workdir/street-housenumbers-szigetmonostor.txt: street-housenumbers.txt
+	@mkdir -p workdir
+	sed 's/3602714372/3600216157/' street-housenumbers.txt > workdir/street-housenumbers-szigetmonostor.txt
 
 workdir/addr-interpolation-gazdagret.txt: addr-interpolation.txt
 	@mkdir -p workdir
