--- a/libreoffice/Makefile
+++ b/libreoffice/Makefile
@@ -5,14 +5,12 @@ NAME := $(shell grep $(USER) /etc/passwd|cut -d : -f 5|cut -d' ' -f 1)
 REGRESSIONS_BLAME_NAME_URL = https://bugs.documentfoundation.org/buglist.cgi?f1=longdesc&f2=keywords&o1=substring&o2=anywords&query_format=advanced&resolution=---&v1=Adding%20Cc%3A%20to%20$(NAME)&v2=regression
 
 PYTHON_FILES = \
-	       find-unneeded-includes \
-	       find-unneeded-includes2 \
 	       find-unsorted-includes \
 	       includetools.py \
 	       qa/empty-atom.py
 
 check: download
-	pep8 --ignore=E501 $(PYTHON_FILES)
+	pycodestyle $(PYTHON_FILES)
 	TDOC="workdir/rtf-regressions.atom" qa/empty-atom.py
 	TDOC="workdir/untagged-rtf-regressions.atom" qa/empty-atom.py
 	TDOC="workdir/regressions-blame-$(USER).atom" qa/empty-atom.py
