osm: add (disabled) houseless-streets / krisztinavaros test

--- a/osm/Makefile
+++ b/osm/Makefile
@@ -1,19 +1,20 @@
 download: update-streets update-house-numbers update-addr-interpolation update-streets-nomaxspeed update-osmose-$(USER)
 
-update-streets: streets.txt workdir/streets-gazdagret.txt workdir/streets-sashegy.txt workdir/streets-nemetvolgy.txt workdir/streets-martonhegy.txt workdir/streets-ormezo.txt
+update-streets: streets.txt workdir/streets-gazdagret.txt workdir/streets-sashegy.txt workdir/streets-nemetvolgy.txt workdir/streets-martonhegy.txt workdir/streets-ormezo.txt workdir/streets-krisztinavaros.txt
 	./overpass-query streets.txt > workdir/streets.csv
 	./overpass-query workdir/streets-gazdagret.txt > workdir/streets-gazdagret.csv
 	./overpass-query workdir/streets-sashegy.txt > workdir/streets-sashegy.csv
 	./overpass-query workdir/streets-nemetvolgy.txt > workdir/streets-nemetvolgy.csv
 	./overpass-query workdir/streets-martonhegy.txt > workdir/streets-martonhegy.csv
 	./overpass-query workdir/streets-ormezo.txt > workdir/streets-ormezo.csv
+	./overpass-query workdir/streets-krisztinavaros.txt > workdir/streets-krisztinavaros.csv
 	./overpass-query workdir/streets-balatonboglar.txt > workdir/streets-balatonboglar.csv
 	./overpass-query workdir/streets-szigetmonostor.txt > workdir/streets-szigetmonostor.csv
 
 update-streets-nomaxspeed: streets-nomaxspeed.txt
 	./overpass-query streets-nomaxspeed.txt > workdir/streets-nomaxspeed.csv
 
-update-house-numbers: street-housenumbers.txt workdir/street-housenumbers-gazdagret.txt workdir/street-housenumbers-sashegy.txt workdir/street-housenumbers-nemetvolgy.txt workdir/street-housenumbers-martonhegy.txt workdir/street-housenumbers-ormezo.txt
+update-house-numbers: street-housenumbers.txt workdir/street-housenumbers-gazdagret.txt workdir/street-housenumbers-sashegy.txt workdir/street-housenumbers-nemetvolgy.txt workdir/street-housenumbers-martonhegy.txt workdir/street-housenumbers-ormezo.txt workdir/street-housenumbers-krisztinavaros.txt
 	@mkdir -p workdir
 	./overpass-query street-housenumbers.txt > workdir/street-housenumbers.csv
 	./overpass-query workdir/street-housenumbers-gazdagret.txt > workdir/street-housenumbers-gazdagret.csv
@@ -23,6 +24,7 @@ update-house-numbers: street-housenumbers.txt workdir/street-housenumbers-gazdag
 	./overpass-query workdir/street-housenumbers-ormezo.txt > workdir/street-housenumbers-ormezo.csv
 	./overpass-query workdir/street-housenumbers-balatonboglar.txt > workdir/street-housenumbers-balatonboglar.csv
 	./overpass-query workdir/street-housenumbers-szigetmonostor.txt > workdir/street-housenumbers-szigetmonostor.csv
+	./overpass-query workdir/street-housenumbers-krisztinavaros.txt > workdir/street-housenumbers-krisztinavaros.csv
 
 update-addr-interpolation: addr-interpolation.txt workdir/street-housenumbers-gazdagret.txt workdir/street-housenumbers-sashegy.txt
 	@mkdir -p workdir
@@ -57,6 +59,7 @@ check: check-style download
 	qa/houseless-streets.py -ormezo
 	#qa/houseless-streets.py -balatonboglar
 	#qa/houseless-streets.py -szigetmonostor
+	#qa/houseless-streets.py -krisztinavaros
 	qa/interpolated-addresses.py
 	qa/interpolated-addresses.py -gazdagret
 	qa/interpolated-addresses.py -sashegy
@@ -130,6 +133,10 @@ workdir/streets-ormezo.txt: streets.txt
 	@mkdir -p workdir
 	sed 's/3602714372/3602713749/' streets.txt > workdir/streets-ormezo.txt
 
+workdir/streets-krisztinavaros.txt: streets.txt
+	@mkdir -p workdir
+	sed 's/3602714372/3602786310/' streets.txt > workdir/streets-krisztinavaros.txt
+
 workdir/street-housenumbers-sashegy.txt: street-housenumbers.txt
 	@mkdir -p workdir
 	sed 's/3602714372/3602714524/' street-housenumbers.txt > workdir/street-housenumbers-sashegy.txt
@@ -145,3 +152,7 @@ workdir/street-housenumbers-martonhegy.txt: street-housenumbers.txt
 workdir/street-housenumbers-ormezo.txt: street-housenumbers.txt
 	@mkdir -p workdir
 	sed 's/3602714372/3602713749/' street-housenumbers.txt > workdir/street-housenumbers-ormezo.txt
+
+workdir/street-housenumbers-krisztinavaros.txt: street-housenumbers.txt
+	@mkdir -p workdir
+	sed 's/3602714372/3602786310/' street-housenumbers.txt > workdir/street-housenumbers-krisztinavaros.txt
