osm: ormezo passes now

--- a/osm/Makefile
+++ b/osm/Makefile
@@ -71,7 +71,7 @@ check: check-style download
 	qa/suspicious-streets.py -gazdagret
 	qa/suspicious-streets.py -sashegy
 	qa/suspicious-streets.py -nemetvolgy
-	#qa/suspicious-streets.py -ormezo
+	qa/suspicious-streets.py -ormezo
 
 workdir/streets-balatonboglar.txt: streets.txt
 	@mkdir -p workdir
