--- a/llvm/libtooling/Makefile
+++ b/llvm/libtooling/Makefile
@@ -1,11 +1,14 @@
 CLANGDEFS=-D__STDC_CONSTANT_MACROS -D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS -fno-rtti
 CLANGWARNS=-Werror -Wall -Wno-missing-braces -Wnon-virtual-dtor -Wendif-labels -Wextra -Wundef -Wunused-macros -Wshadow -Woverloaded-virtual
 CLANGFLAGS = $(CLANGDEFS) $(CLANGWARNS) -g -std=c++11
-CLANGLIBS = -lclangAST -lclangBasic -lclangFrontend -lclangRewrite -lclangTooling -lclangToolingCore -lclangASTMatchers -lLLVM
+CLANGLIBS = -lclangAST -lclangBasic -lclangFrontend -lclangRewrite -lclangTooling -lclangToolingCore -lclangASTMatchers -lclangLex -lLLVM
 
-all: bin/readability-avoid-auto bin/bugprone-suspicious-xmlsec
+all: bin/readability-avoid-auto bin/bugprone-suspicious-xmlsec bin/readability-redundant-pp
 
 bin/readability-avoid-auto: readability-avoid-auto.cxx Makefile
+	clang++ $(CLANGFLAGS) $(CLANGLIBS) -ldl -lpthread -o $@ $<
+
+bin/readability-redundant-pp: readability-redundant-pp.cxx Makefile
 	clang++ $(CLANGFLAGS) $(CLANGLIBS) -ldl -lpthread -o $@ $<
 
 bin/bugprone-suspicious-xmlsec: bugprone-suspicious-xmlsec.cxx Makefile
