objc: clean up makefile

--- a/objc/hello/Makefile
+++ b/objc/hello/Makefile
@@ -1,3 +1,5 @@
 OBJC_FLAGS = $(shell gnustep-config --objc-flags)
+OBJC_LIBS = $(shell gnustep-config --base-libs)
+
 main: main.m Makefile
-	clang $(OBJC_FLAGS) -o main -x objective-c main.m -fconstant-string-class=NSConstantString -fobjc-nonfragile-abi -fblocks -lobjc -lgnustep-base -ldispatch -I/usr/include/GNUstep -L/usr/GNUstep/Local/Library/Libraries/
+	clang $(OBJC_FLAGS) $(OBJC_LIBS) -o main main.m
