obcj: get this to work on Darwin as well

--- a/objc/hello/Makefile
+++ b/objc/hello/Makefile
@@ -1,5 +1,9 @@
+ifeq ($(shell uname),Darwin)
+OBJC_LIBS = -framework Foundation
+else
 OBJC_FLAGS = $(shell gnustep-config --objc-flags)
 OBJC_LIBS = $(shell gnustep-config --base-libs)
+endif
 
 main: main.m Makefile
 	clang $(OBJC_FLAGS) $(OBJC_LIBS) -o main main.m
