addr-osmify-objc: turns on cmdline arc is still opt-in

--- a/osm/addr-osmify-objc/Makefile
+++ b/osm/addr-osmify-objc/Makefile
@@ -6,4 +6,7 @@ OBJC_LIBS = $(shell gnustep-config --base-libs)
 endif
 
 main: main.m Makefile
-	clang -g -Wall -Wextra -Werror $(OBJC_FLAGS) $(OBJC_LIBS) -o main main.m
+	clang -fobjc-arc -g -Wall -Wextra -Werror $(OBJC_FLAGS) $(OBJC_LIBS) -o main main.m
+
+check:
+	clang -fobjc-arc --analyze main.m
