sleepavg: add a c++ port

--- a/python/Makefile
+++ b/python/Makefile
@@ -6,3 +6,6 @@ check:
 	for i in $(PYFILES); do \
 		mypy --strict $$i; \
 	done
+
+sleepavg.bin: sleepavg.cxx
+	g++ -std=c++11 -o sleepavg.bin sleepavg.cxx
