--- a/osm/housenumber-filters-magasut.yaml
+++ b/osm/housenumber-filters-magasut.yaml
@@ -19,4 +19,8 @@ filters:
     ranges:
     - {start: '1', end: '11', isOdd: 'true'}
     - {start: '2', end: '12', isOdd: 'false'}
+  magasuti_koz:
+    ranges:
+    - {start: '1', end: '9', isOdd: 'true'}
+    - {start: '2', end: '8', isOdd: 'false'}
 source: survey
